# tersmfx

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/audio/: mod.rs
src/cli/: mod.rs
src/client/: mod.rs
src/config/: mod.rs  termsfx_config.rs  termsfx_config_loader.rs  termsfx_config_source.rs
src/daemon/: daemon_action.rs  mod.rs
