[package]
name = "termsfx"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive"] }
config = "0.14.1"
daemonize = "0.5.0"
dirs = "5.0.1"
notify = "7.0.0"
rodio = "0.19.0"
serde = { version = "1.0.214", features = ["serde_derive"] }
sysinfo = "0.32.0"
tokio = { version = "1.41.0", features = ["full"] }
